upgrade project setting and part of java code to java 8